SERVER-76654 Extend CollectionLock lifetime in dbHash

(cherry picked from commit 541296caf8b32b731e46d2ccfa4e43f9653c9d54)